err/amqp-dispatcher.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/amqp_dispatcher-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/amqpdispatcher'...
Compiling './lib/python3.5/site-packages/amqpdispatcher/validate.py'...
***   File "./lib/python3.5/site-packages/amqpdispatcher/validate.py", line 30
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/haigha'...
Listing './lib/python3.5/site-packages/haigha/classes'...
Listing './lib/python3.5/site-packages/haigha/connections'...
Listing './lib/python3.5/site-packages/haigha/frames'...
Compiling './lib/python3.5/site-packages/haigha/frames/frame.py'...
***   File "./lib/python3.5/site-packages/haigha/frames/frame.py", line 74
    raise Frame.FormatError, str(e), sys.exc_info()[-1]
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haigha/transports'...
Compiling './lib/python3.5/site-packages/haigha/transports/event_transport.py'...
***   File "./lib/python3.5/site-packages/haigha/transports/event_transport.py", line 49
    def connect(self, (host, port)):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haigha/transports/gevent_transport.py'...
***   File "./lib/python3.5/site-packages/haigha/transports/gevent_transport.py", line 49
    def connect(self, (host, port)):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haigha/transports/socket_transport.py'...
***   File "./lib/python3.5/site-packages/haigha/transports/socket_transport.py", line 27
    def connect(self, (host, port), klass=socket.socket):
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haigha-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Listing './lib/python3.5/site-packages/pika-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
